Add Policies And Rate Limiter

--- a/CSPortfolioWebApp/index.html
+++ b/CSPortfolioWebApp/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CS2 Portfolio</title>
+    <title>CS2 Inventory Pro</title>
     <meta name="description" content="Modern inventory management system with real-time tracking, price history, and transaction management. Built with React and TypeScript." />
     <meta name="author" content="Inventory Pro" />
 
-    <meta property="og:title" content="CS2 Portfolio" />
+    <meta property="og:title" content="CS2 Inventory Pro" />
     <meta property="og:description" content="Modern inventory management system with real-time tracking, price history, and transaction management." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
